feat: otimizando e adicionando user_id como obrigatório no body