@@ -1,5 +1,5 @@
 FROM adoptopenjdk:17-jre-hotspot
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} application.jar
-EXPOSE 8080
-ENTRYPOINT ["java","-jar","/microservice-authentication.jar"]
+EXPOSE 8010
+CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify -jar application.jar
